# motive-financialgpt

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
financialgpt/core/: __init__.py  model.py
financialgpt/data/: load.py  transform.py
financialgpt/entity/: __init__.py  asset_performance.py  client_allocation.py  client_profile.py  target_allocation.py
scripts/: chatbot.py  load_data.py  sql_agent.py
tests/financialgpt/data/: test_transform.py
